# remotive_code_generation

./: CLAUDE.md  README.md  new_schema.yaml  target_and_requirement.md
.claude/: settings.json
bmgen_ECA/: DESIGN_DECISIONS.md  README.md  pyproject.toml
bmgen_ECA/src/bmgen_eca/: __main__.py  cli.py  diagnostics.py  expr.py  ir.py  parser.py  pipeline.py  rules.py  semantic.py  signals.py  symbols.py  verify.py
bmgen_ECA/src/bmgen_eca/codegen/: __init__.py
bmgen_ECA/src/bmgen_eca/codegen/templates/: init.py.j2  main.py.j2
bmgen_ECA/tests/: conftest.py  test_acceptance_matrix.py  test_cli.py  test_codegen.py  test_diagnostics.py  test_expr.py  test_parser.py  test_pipeline_e2e.py  test_pipeline_partial.py  test_rules.py  test_semantic_red.py  test_signals.py  test_symbols.py
bmgen_ECA/tests/fixtures/: schema_v2.yaml
docs/: recipes_reference.html
remotive-bm-compiler/: README.md  pyproject.toml
remotive-bm-compiler/.github/workflows/: verify.yml
remotive-bm-compiler/bmgen/: __init__.py  cli.py
remotive-bm-compiler/bmgen/compiler/: __init__.py  context_builder.py  python_generator.py
remotive-bm-compiler/bmgen/compiler/templates/: handler_actuator_command.py.j2  handler_blink.py.j2  handler_direct.py.j2  handler_logic.py.j2  handler_reset.py.j2  handler_toggle.py.j2  handler_websocket.py.j2  main.py.j2
remotive-bm-compiler/bmgen/config/: __init__.py  defaults.py
remotive-bm-compiler/bmgen/ir/: __init__.py  builder.py  model.py  parser.py  validators.py
remotive-bm-compiler/bmgen/recipes/: __init__.py  actuator_command.py  base.py  direct_signal_mapping.py  logic_gate.py  periodic_blinking_output.py  registry.py  threshold_mapping.py  toggle_button_state.py  websocket_bridge.py  weighted_log_odds.py
remotive-bm-compiler/bmgen/verifier/: __init__.py  behavioral.py  composition.py  report.py  runner.py  structural.py
remotive-bm-compiler/docs/architecture/: MVP_BACKLOG.md
remotive-bm-compiler/examples/: bcm_blinking.yaml  bcm_direct.yaml  bcm_error_no_plugin.yaml  bcm_toggle.yaml  dms_camera_websocket.yaml  lgcm_logic_gates.yaml
remotive-bm-compiler/examples/cpd/: airbag_ecu.yaml  cam_ecu.yaml  central_computer.yaml  cockpit_ecu.yaml  subecu_seat.yaml  zonal_ecu.yaml
remotive-bm-compiler/remotive_bm_compiler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
remotive-bm-compiler/tests/: conftest.py  test_actuator_command.py  test_compile_direct_mapping.py  test_ir_validation.py  test_multi_output.py  test_threshold_mapping.py  test_verify_generated.py  test_websocket_bridge.py
test_env/VF_child-detection/models/driver_monitoring_ecu/python/: pyproject.toml
test_env/VF_child-detection/models/driver_monitoring_ecu/python/drivermonitoringecu/: __main__.py
test_env/VF_child-detection/models/seat_ecu/python/: pyproject.toml
test_env/VF_child-detection/models/seat_ecu/python/seatecu/: __main__.py
vehicle_functions/child_detection/topology/tests/: conftest.py  pyproject.toml  test_child_detection_generated.py  tester.instance.yaml
(+112 files in other folders)
