[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bmgen-eca"
version = "0.1.0"
description = "ECA schema_v2 → Remotive Behavioral Model compiler"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "Jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
bmgen-eca = "bmgen_eca.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bmgen_eca = ["codegen/templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
