[project]
name = "child-detection-generated-tests"
description = "E2E tests for bmgen output under vehicle_functions/child_detection/generated"
version = "0.1.0"
requires-python = ">=3.11,<4.0"

dependencies = [
  "pytest==8.4.2",
  "pytest-asyncio==1.0.0",
  "pytest-timeout==2.4.0",
  "remotivelabs-topology~=0.19.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"