[project]
name = "drivermonitoringecu"
description = "DriverMonitoringECU behavioral model — bridges external camera websocket to CAN restbus"
version = "0.1.0"
requires-python = ">=3.11,<4.0"

dependencies = [
  "remotivelabs-topology~=0.19.3",
  "structlog>=24.1.0",
  "websockets>=13.0,<15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["drivermonitoringecu"]
