[project]
name = "seatecu"
description = "SeatECU behavioral model — seat-weight threshold to SeatOccupied"
version = "0.1.0"
requires-python = ">=3.11,<4.0"

dependencies = [
  "remotivelabs-topology~=0.19.3",
  "structlog>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["seatecu"]
